--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -3064,13 +3064,24 @@ ol.flickity-page-dots {
 div.wpcf7-mail-sent-ok {
   border: none;
   font-weight: 600;
-  color: #14225F; }
+  color: #14225F;
+  text-align: center; }
+  @media (min-width: 1000px) {
+    div.wpcf7-mail-sent-ok {
+      -webkit-text-emphasis: left;
+              text-emphasis: left; } }
 
 div.wpcf7-validation-errors,
 div.wpcf7-acceptance-missing {
+  text-align: center;
   border: none;
   font-weight: 600;
   color: #14225F; }
+  @media (min-width: 1000px) {
+    div.wpcf7-validation-errors,
+    div.wpcf7-acceptance-missing {
+      -webkit-text-emphasis: left;
+              text-emphasis: left; } }
 
 /*--------------------------------------------------------------
 # 404 Page
@@ -4227,59 +4238,45 @@ h3.more-article {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
-  .blog .site-content {
-    background-image: url("../../assets/images/flowing.png");
-    background-position: -500px;
-    background-size: 2500px;
-    background-repeat: no-repeat;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap; }
+  @media (min-width: 1000px) {
+    .blog .site-content .blog-header {
+      height: 15rem;
+      background-image: url("../../assets/images/flowimpact.png"), url("../../assets/images/Impactfullygiving.png");
+      background-size: 800px, 318px;
+      background-position: top -43px left -453px, top 10px right 30px;
+      background-repeat: no-repeat no-repeat;
+      padding-bottom: 2rem;
+      padding-bottom: 18rem; } }
+  .blog .site-content .blog-header .impact-title h2 {
+    text-align: center;
+    text-transform: capitalize;
+    color: #14225F;
+    font-size: 1.5rem; }
+    @media (min-width: 600px) {
+      .blog .site-content .blog-header .impact-title h2 {
+        font-size: 2rem; } }
     @media (min-width: 1000px) {
-      .blog .site-content .blog-header {
-        height: 15rem;
-        background-image: url("../../assets/images/flowimpact.png"), url("../../assets/images/Impactfullygiving.png");
-        background-size: 800px, 318px;
-        background-position: top -43px left -453px, top 10px right 30px;
-        background-repeat: no-repeat no-repeat;
-        padding-bottom: 2rem;
-        padding-bottom: 18rem; } }
-    .blog .site-content .blog-header .impact-title h2 {
-      text-align: center;
-      text-transform: capitalize;
-      color: #14225F;
-      font-size: 1.5rem; }
-      @media (min-width: 600px) {
-        .blog .site-content .blog-header .impact-title h2 {
-          font-size: 2rem; } }
-      @media (min-width: 1000px) {
-        .blog .site-content .blog-header .impact-title h2 {
-          font-size: 3rem;
-          margin: 7rem 0 0.5rem 0;
-          text-transform: capitalize;
-          color: #14225F; } }
-    .blog .site-content .blog-header .impact-title p {
-      font-size: 1rem;
-      text-align: center;
-      font-weight: bold;
-      margin-bottom: 2rem; }
-      @media (min-width: 1000px) {
-        .blog .site-content .blog-header .impact-title p {
-          margin: 0; } }
-    .blog .site-content .blog-header .impact-heart {
-      text-align: center; }
-      @media (min-width: 1000px) {
-        .blog .site-content .blog-header .impact-heart {
-          display: none; } }
-      .blog .site-content .blog-header .impact-heart img {
-        -o-object-fit: cover;
-           object-fit: cover; }
+      .blog .site-content .blog-header .impact-title h2 {
+        font-size: 3rem;
+        margin: 7rem 0 0.5rem 0;
+        text-transform: capitalize;
+        color: #14225F; } }
+  .blog .site-content .blog-header .impact-title p {
+    font-size: 1rem;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 2rem; }
+    @media (min-width: 1000px) {
+      .blog .site-content .blog-header .impact-title p {
+        margin: 0; } }
+  .blog .site-content .blog-header .impact-heart {
+    text-align: center; }
+    @media (min-width: 1000px) {
+      .blog .site-content .blog-header .impact-heart {
+        display: none; } }
+    .blog .site-content .blog-header .impact-heart img {
+      -o-object-fit: cover;
+         object-fit: cover; }
 
 .blog .read-more {
   position: relative;
