Add margin on bottom on site content to avoid carousel dots entering other containers

--- a/themes/rcforward/sass/_page-templates.scss
+++ b/themes/rcforward/sass/_page-templates.scss
@@ -641,6 +641,7 @@
     }
     .custom-plan {
       margin: 0 auto;
+      margin-top: 10rem;
     }
     @include tablet {
       .related-charities {
