--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -1252,7 +1252,8 @@ body .hide-desktop {
     display: none; }
 
 .single-fund .hfeed .custom-plan {
-  margin: 0 auto; }
+  margin: 0 auto;
+  margin-top: 10rem; }
 
 /* The Team page */
 .page-template-page-team .site-content .entry-header {
@@ -1574,7 +1575,7 @@ body .hide-desktop {
   background: #14225F;
   border: none;
   padding-right: 25px; }
-  @media (min-width: 1000px) {
+  @media (min-width: 800px) {
     .hamburger--boring {
       display: none; } }
 
@@ -4194,9 +4195,6 @@ h3.more-article {
     position: absolute;
     bottom: -6px;
     right: 17px; }
-    .blog .read-more .read-more-arrow:hover {
-      color: #fff;
-      text-shadow: indianred; }
     @media (min-width: 1000px) {
       .blog .read-more .read-more-arrow {
         bottom: 7px; } }
