--- a/themes/rcforward/sass/_navigation.scss
+++ b/themes/rcforward/sass/_navigation.scss
@@ -87,7 +87,7 @@
       }
     }
     .main-navigation {
-      display: none;
+      // display: none;
       width: 100%;
       @include desktop {
         display: block;
