--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -669,7 +669,6 @@ body .hide-desktop {
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
 
-/* Front page */
 /* How it works Page */
 .page-template-page-how-it-works .site-content .entry-header {
   background-color: rgba(216, 216, 216, 0.18); }
@@ -2468,7 +2467,8 @@ ol.flickity-page-dots {
     .custom-plan .single-custom-plan:hover {
       -webkit-box-shadow: 0px 3px 5px #42299A;
               box-shadow: 0px 3px 5px #42299A; }
-    .custom-plan .single-custom-plan button, .custom-plan .single-custom-plan a {
+    .custom-plan .single-custom-plan button,
+    .custom-plan .single-custom-plan a {
       background: #14225F;
       padding: 0.7rem 1.5rem;
       color: white;
@@ -2482,7 +2482,8 @@ ol.flickity-page-dots {
       font-size: 20.8px;
       font-size: 1.3rem;
       border-radius: 7px; }
-      .custom-plan .single-custom-plan button:hover, .custom-plan .single-custom-plan a:hover {
+      .custom-plan .single-custom-plan button:hover,
+      .custom-plan .single-custom-plan a:hover {
         -webkit-box-shadow: 0px 2px 2px #02040b;
                 box-shadow: 0px 2px 2px #02040b;
         text-shadow: 1px 0.5px 1px #999999; }
@@ -2598,7 +2599,7 @@ ol.flickity-page-dots {
     .home .header-content .front-page-header-buttons .how-it-works-button {
       color: #42299A;
       border: 2px solid #42299A;
-      margin-right: .5rem; }
+      margin-right: 0.5rem; }
       .home .header-content .front-page-header-buttons .how-it-works-button:hover {
         text-shadow: 1px 0.5px 1px #311e72;
         -webkit-box-shadow: 0px 2px 2px #42299A;
@@ -2609,7 +2610,7 @@ ol.flickity-page-dots {
     .home .header-content .front-page-header-buttons .donate-page-button {
       background-color: #00BEA8;
       padding: 0;
-      margin-left: .5rem; }
+      margin-left: 0.5rem; }
       .home .header-content .front-page-header-buttons .donate-page-button:hover {
         text-shadow: 1px 0.5px 1px #008b7b;
         -webkit-box-shadow: 0px 2px 2px #002521;
@@ -3419,7 +3420,7 @@ div.wpcf7-acceptance-missing {
     letter-spacing: 0.5px; }
     .page-donate .entry-header h2::before {
       content: '\f10d';
-      font-family: "Font Awesome 5 Free";
+      font-family: 'Font Awesome 5 Free';
       display: block;
       text-align: left;
       padding-left: 0.5rem;
@@ -3428,7 +3429,7 @@ div.wpcf7-acceptance-missing {
       color: #00BEA8; }
     .page-donate .entry-header h2::after {
       content: '\f10e';
-      font-family: "Font Awesome 5 Free";
+      font-family: 'Font Awesome 5 Free';
       display: block;
       text-align: right;
       padding-right: 0.5rem;
@@ -4059,7 +4060,7 @@ div.wpcf7-acceptance-missing {
       .page-donate .show-charities .single-charity .buttons .button {
         width: 100%;
         height: 3rem;
-        margin-bottom: .6rem; }
+        margin-bottom: 0.6rem; }
         @media (min-width: 600px) {
           .page-donate .show-charities .single-charity .buttons .button {
             padding: 0;
